fix skillitem text wrapping

--- a/src/components/SkillTable/SkillTable.scss
+++ b/src/components/SkillTable/SkillTable.scss
@@ -36,7 +36,6 @@ $lightnessLow: 20%;
 
     .name {
       text-transform: capitalize;
-
     }
 
     small span {
@@ -50,7 +49,7 @@ $lightnessLow: 20%;
       z-index: 10;
 
       small span {
-        display: inline-block;
+        display: initial;
       }
 
     }
